--- a/DAy17_Annotation/bin/.project
+++ b/DAy17_Annotation/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test</name>
+	<name>DAy17_Annotation</name>
 	<comment></comment>
 	<projects>
 	</projects>
